<resources>
    <string name="app_name">GamesXMatch</string>
    <string name="action_settings">Settings</string>
    <string name="landing_button">Get Started</string>
    <string name="landing_text">Welcome to GameXMatch</string>
    <string name="core_profile_button">Profile</string>
    <string name="core_swipe_button">Swipe</string>
    <string name="core_match_button">Match</string>
    <string name="swipe_left_button">X</string>
    <string name="swipe_right_button">V</string>
    <string name="match_title">Vos conversations</string>
    <string name="chat_debug_text">Nope, it\'s not working</string>
    <string name="chat_return_button">return</string>
    <string name="chat_send_button">send</string>
    <string name="chat_default_editText_value">enter your message here</string>
    <string name="profile_title">Votre Profile</string>
    <string name="profile_edit_name_button">edit name</string>
    <string name="profile_editname">Nom d\'utilisateur</string>
    <string name="profile_disconnect">Log out</string>
    <string name="profile_user_description_label">À propos de moi</string>
    <string name="profile_description_button">edit description</string>
    <string name="profile_descrption_editext">Je cherche des mates pour du gaming hardcore. Tellement hardcore qu\'on sue</string>
    <string name="matchProfile_name">Nom d\'utilisateur</string>
    <string name="matchProfile_description">Je cherche des mates pour du gaming hardcore. Tellement hardcore qu\'on sue</string>
    <string name="matchprofile_button">return button</string>
    <string name="component_game_label">GAME NAME</string>
    <string name="profile_game_list_label">Interested Games</string>
    <string name="profile_game_add_button_label">Add games</string>
    <string name="game_select_label">Select your games</string>
</resources>
