<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/matchProfile_return_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/matchprofile_button"
            android:minHeight="48dp"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <TextView
            android:id="@+id/profile_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/core_profile_button"
            android:textSize="34sp" />

        <ImageView
            android:id="@+id/matchprofile_profilePicture_imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@android:drawable/ic_menu_mapmode" />

        <TextView
            android:id="@+id/matchProfile_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/matchProfile_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:text="@string/profile_user_description_label"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/matchProfile_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/matchProfile_description"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>