<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/chat_imageButton_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:contentDescription="@string/chat_return_button"
                app:srcCompat="?attr/actionModeCloseDrawable" />

            <ImageView
                android:id="@+id/chat_profile_picture"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                app:srcCompat="@android:drawable/ic_menu_mapmode" />

            <TextView
                android:id="@+id/chat_debug_text"
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="match_parent"
                android:text="@string/chat_debug_text" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/chat_editText_message"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/chat_default_editText_value" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/chat_send_button"
                app:srcCompat="@android:drawable/ic_media_play" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>